Adicao de type=module no HTML

--- a/PSoft/frontEnd/public_html/app1/index.html
+++ b/PSoft/frontEnd/public_html/app1/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Lista de Disciplinas</title>
-    <script src="app.js"></script>
-<!--<script type="module" src="app.js"></script>  //  type="module" torna os aquivos com escopo global, e nao local-->
+    <script type="module" src="app.js"></script>
+    <!-- type="module" torna os aquivos com escopo global, e nao local-->
     
 </head>
 <body>
