Reformulacao para commit feito em Lab

--- a/PSoft/frontEnd/public_html/app1/index.html
+++ b/PSoft/frontEnd/public_html/app1/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="pt">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <title>Lista de Disciplinas</title>
     <script type="module" src="app.js"></script>
     <!-- type="module" torna os aquivos com escopo global, e nao local-->
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <h1></h1>
+    <h1>Disciplinas da Turma:</h1>
     <div></div>
 </body>
-</html>>
+</html>
