--- a/PSoft/frontEnd/public_html/app1/index.html
+++ b/PSoft/frontEnd/public_html/app1/index.html
@@ -2,14 +2,21 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8" />
-    <title>Lista de Disciplinas</title>
+    <title>Sistema de Disciplinas de Raquel</title>
     <script type="module" src="app.js"></script>
     <!-- type="module" torna os aquivos com escopo global, e nao local-->
     
 </head>
 <body>
     
+    <hr>
     <h1>Disciplinas da Turma:</h1>
     <div></div>
+    <hr>
+
+    <p>Disciplina <input id="nome type="text"></p>
+    <p>Nota <input id="nota type="text"></p>
+    <button>Salvar Disciplina</button>
+
 </body>
 </html>
