--- a/PSoft/frontEnd/public_html/app1/index.html
+++ b/PSoft/frontEnd/public_html/app1/index.html
@@ -14,8 +14,8 @@
     <div></div>
     <hr>
 
-    <p>Disciplina <input id="nome type="text"></p>
-    <p>Nota <input id="nota type="text"></p>
+    <p>Disciplina <input id="nome" type="text"></p>
+    <p>Nota <input id="nota" type="text"></p>
     <button>Salvar Disciplina</button>
 
 </body>
