Realizando POST sem atualizar o DOM

--- a/PSoft/frontEnd/public_html/app1/index.html
+++ b/PSoft/frontEnd/public_html/app1/index.html
@@ -16,7 +16,7 @@
 
     <p>Disciplina <input id="nome" type="text"></p>
     <p>Nota <input id="nota" type="text"></p>
-    <button>Salvar Disciplina</button>
+    <button id="botao">Salvar Disciplina</button>
 
 </body>
 </html>
