--- a/PSoft/frontEnd/public_html/app1/index.html
+++ b/PSoft/frontEnd/public_html/app1/index.html
@@ -14,6 +14,7 @@
     <div></div>
     <hr>
 
+    <p id="mensagem"></p>
     <p>Disciplina <input id="nome" type="text"></p>
     <p>Nota <input id="nota" type="text"></p>
     <button id="botao">Salvar Disciplina</button>
