--- a/PSoft/frontEnd/public_html/app1/index.html
+++ b/PSoft/frontEnd/public_html/app1/index.html
@@ -11,7 +11,7 @@
     
     <hr>
     <h1>Disciplinas da Turma:</h1>
-    <div></div>
+    <div id="divDisciplina"></div>
     <hr>
 
     <p id="mensagem"></p>
